[package]
name = "injectors"
version = "0.1.1"
edition = "2021"
description = "远程线程注入的封装"
repository = "https://github.com/hamflx/injectors"
license = "MIT"

[dependencies]
bincode = "1.3.3"
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.32"
widestring = "1.0.2"
windows-sys = { version = "0.48.0", features = ["Win32_System_LibraryLoader", "Win32_System_SystemInformation", "Win32_System_Diagnostics_Debug", "Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Win32_System_Memory", "Win32_System_Kernel", "Win32_System_WindowsProgramming", "Win32_System_SystemServices", "Win32_System_ProcessStatus"] }
